# lab06-lastrobotstanding-roboto

./: .gitignore  BetterR.cpp  BetterR.h  CMakeLists.txt  Game.cpp  Game.h  README.md  RobotState.cpp  RobotState.h  const.h  helper.cpp  helper.h  main.cpp
.github/: pull_request_template.md
robots/: BetterR.cpp  BetterR.h  RandomRoboto.cpp  RandomRoboto.h  Roboto.cpp  Roboto.h
